PR/49054: Uwe Toenjes: Some RAID controllers return more bytes in the scsi 3 inquiry command than expected by the size of the scsi 3 inquiry packet. This can be detected by looking at the additional_length field returned by the scsi 2 inquiry. If that's the case, avoid doing the scsi 3 inquiry because we can't handle the extra bytes later. XXX: Pullup -7